2006-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* html.test: Fixed use of duplicate test names.

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* html.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* html.test: Hooked into the new common test support code.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-03  Andreas Kupries <andreask@activestate.com>

	* html.tcl (::html::html_entities): Accepted the [SF Tcllib Patch
	* html.tcl (::html::nl2br):         1294733], creating two small
	* html.man:                         commands for the conversion of
	* html.test:                        special characters to their
	                                    entities, and line-endings to
	                                    <br>. Extended documentation
	                                    and testsuite.

2005-01-19  Andreas Kupries <andreask@activestate.com>

	* html.tcl (::html::font): Fixed [Tcllib SF Bug 1105010], reported
	  by Luciano <lucianoes@users.sourceforge.net>. The parameters for
	  the font tag were duplicated.
	* html.test: Added tests for "html::font".

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

Wed Sep 29 12:01:34 2004  Andreas Kupries <andreask@activestate.com>

	* html.man: Accepted patch provided by Michael Schlenker
 	  <mic42@users.sourceforge.net>, completes the documentation of
 	  html::checkSet. This fixes [Tcllib SF Bug 898774].

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 
